tests/algorithms/x/C/data_structures/arrays/product_sum.c
// Generated by Mochi 0.10.32 on 2025-08-24 14:55 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>


size_t append_len;
#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static int _atoi(const char *s) {
    return atoi(s);
}

const char* example_init[5] = {"5", "2", (long long[]){-7LL, 1LL}, "3", (long long[]){6LL, (long long[]){-13LL, 8LL}, 4LL}};
const char* *example = example_init;
size_t example_len = 5;

long long product_sum(const char* * arr, size_t arr_len, long long depth);
long long product_sum_array(const char* * array, size_t array_len);
int main(void);

long long product_sum(const char* * arr, size_t arr_len, long long depth) {
    long long total = 0LL;
    long long i = 0LL;
    while (i < arr_len) {
        const char* el = arr[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
        if (exists(el)) {
            total = total + product_sum(el, el_len, depth + 1LL);
        } else {
            total = total + _atoi(el);
        }
        i = i + 1LL;
    }
    return total * depth;
}

long long product_sum_array(const char* * array, size_t array_len) {
    long long res = product_sum(array, array_len, 1LL);
    return res;
}

int main(void) {
    {
        long long __start = _now();
        printf("%d\n", product_sum_array(example, example_len));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
